# bird-calls-detection

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt
artifacts/: metadata.json
src/inference/: app.py  dockerfile  predictor.py
src/preproces/feature_extraction/: feature.py
src/preproces/noise_reduction/: noisereduction.py
src/train/: config.yaml  train.py
