[project]
name = "bird-calls-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "ffmpeg>=1.4",
    "librosa>=0.11.0",
    "mlflow>=3.2.0",
    "noisereduce>=3.0.3",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "scikit-learn>=1.6.1",
]
